<resources>
    <!--nombre app-->
    <string name="app_name">Unifranzitos2</string>

    <!--pantalla uno-->
    <string name="title1">Bienvenido</string>
    <string name="desc1">Campeonato de fútbol UnifranZitos a nivel local y todas las sedes.</string>

    <!--pantalla dos-->
    <string name="title2">Grandes premios</string>
    <string name="desc2">Se tiene categoría varones y mujeres con premiacion hasta el 3er lugar</string>

    <!--pantalla tres-->
    <string name="title3">Inscripcion</string>
    <string name="desc3">Inscribe a tu equipo desde la App</string>

    <!--botonera-->
    <string name="next">Siguiente</string>
    <string name="back">Atrás</string>
    <string name="done">Finalizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

</resources>

